--- a/principal.css
+++ b/principal.css
@@ -9,7 +9,7 @@
 }
 
 body {
-    background-color:#3a53c3;
+    background-color:#a6b2e8;
 }
 
 header {
@@ -62,7 +62,7 @@ nav {
 }
 
 nav > a {
-    color: rgb(155, 28, 28);
+    color: rgb(30, 55, 197);
     padding: 10px;
     text-decoration: none;
     font-weight: bold;
@@ -76,7 +76,7 @@ main {
     margin: auto;
     /* padding: 30px; */
     padding-bottom: 780px;
-    background-color:rgb(220, 185, 185);
+    background-color:rgb(125, 125, 131);
     box-shadow: 0px, 0px 10px rgba(0, 0, 0, 0.425);
 }
 
@@ -232,7 +232,7 @@ main {
 }
 
 .blue {
-    color: rgb(58, 146, 234);
+    color: rgb(168, 190, 211);
    
 }
 
